# babafun.github.io

./: .gitignore  README.md  demo.html  index.html  package-lock.json  package.json  test-simple.js  vite.config.ts
.kiro/specs/music-portfolio/: design.md  requirements.md  tasks.md
css/: index.css
rust/: Cargo.toml  STRUCTS_SUMMARY.md
rust/src/: filters.rs  grouping.rs  lib.rs  validation.rs
src/: App.tsx  main.tsx
src/components/: CreatorListView.tsx  DiscographyView.test.tsx  DiscographyView.tsx  Navbar.tsx  SongDetailView.test.tsx  SongDetailView.tsx  ViewSelector.tsx
src/data/: music.json
src/demo/: dataLoader-demo.ts
src/pages/: AlbumPage.tsx  CodePage.tsx  DiscographyPage.tsx  HomePage.tsx  LicensesPage.tsx  MusicHomePage.tsx  SearchPage.tsx  SongPage.tsx
src/styles/: code.css  colors.css  home.css  main.css  music.css  search.css
src/test/: colorContrast.test.ts  creatorFriendly.property.test.ts  dataLoader.basic.test.ts  dataLoader.test.ts  display.test.ts  filters.test.ts  grouping.property.test.ts  setup.test.ts  setup.ts  uniqueIds.property.test.ts  validation.property.test.ts
src/test/components/: DiscographyView.property.test.tsx  DiscographyView.test.tsx
src/types/: music.ts
src/utils/: colorContrast.ts  dataLoader.ts  display.ts  filters.ts
src/wasm/: .gitkeep  bindings.ts
test/: README.md  arbitraries.test.ts  arbitraries.ts
