[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
lazy_static = "1.4"

# Optional dependency for better panic messages in development
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
dev = ["console_error_panic_hook"]

# Optimize for size in release builds
[profile.release]
opt-level = "s"  # Optimize for size
lto = true       # Enable link-time optimization
codegen-units = 1
panic = "abort"
